# guideline-compliance-engine

./: .gitattributes  .gitignore  CHANGELOG.md  README.md  STATUS.md  pyproject.toml
.github/workflows/: ci.yml
examples/: accounts.yaml  guidelines.json  guidelines.yaml  guidelines_credit.yaml  guidelines_multi.yaml  portfolio.csv  portfolio_credit.json  portfolio_multi.csv  portfolio_prior.csv  restricted_names.txt
src/compliance/: __init__.py  __main__.py  batch.py  cli.py  compare.py  engine.py  loaders.py  models.py  py.typed  ratings.py  report.py  tolerance.py  validation.py  waivers.py
src/compliance/rules/: __init__.py  base.py  credit_floor.py  currency_exposure.py  duration_band.py  issuer_concentration.py  restricted_list.py  sector_cap.py
tests/: conftest.py  test_config_validation.py  test_engine_and_report.py  test_golden.py  test_loaders_and_cli.py  test_ratings.py  test_rules.py  test_v2_features.py  test_v2_loaders_cli.py  test_v3_batch_cli.py  test_v3_features.py
tests/golden/: credit_report.html  credit_report.txt
